refactor: extract reusable code from app directory to utils and hooks
- Extract font sources configuration to utils/fonts.ts
- Extract URL utilities (decoding, hostname) to utils/url.ts
- Extract translation/language utilities to utils/translation.ts
- Extract date formatting utilities to utils/date.ts
- Extract kitchen inventory sorting utilities to utils/kitchen.ts
- Extract general formatting utilities to utils/formatting.ts
- Extract link preview fetching to utils/linkPreview.ts and hooks/useLinkPreviews.ts
- Extract inventory categorization to utils/inventoryCategories.ts
- Extract recipe list utilities to utils/recipeLists.ts
- Update all app screens to use new utility functions
- Fix API path for generateRecipeImagePrompt in index.tsx
- Add Android build fixes: update clean scripts to handle CMake cache
- Add Android network security config for Convex connectivity
- Add comprehensive documentation: REFACTORING_CHANGES.md and APP_STRUCTURE.md

This refactoring improves code reusability, maintainability, and organization
while preserving all existing functionality.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "android": "expo run:android",
     "android:dev": "expo run:android --device",
     "android:emulator": "expo run:android --no-build-cache",
-    "android:clean": "cd android && ./gradlew clean && cd ..",
+    "android:clean": "rm -rf android/app/.cxx && cd android && ./gradlew clean && cd ..",
     "convex:dev": "npx convex dev",
     "ios": "expo run:ios",
     "ios:device": "expo run:ios --device",
@@ -39,7 +39,7 @@
     "clean": "rm -rf node_modules && rm -rf .expo && rm -rf dist && rm -rf ios/build && rm -rf android/build && rm -rf android/app/build",
     "clean:cache": "rm -rf .expo && rm -rf node_modules/.cache",
     "clean:ios": "rm -rf ios/build && rm -rf ios/Pods && rm -rf ios/Podfile.lock",
-    "clean:android": "rm -rf android/build && rm -rf android/app/build && rm -rf android/.gradle",
+    "clean:android": "rm -rf android/build && rm -rf android/app/build && rm -rf android/app/.cxx && rm -rf android/.gradle",
     "reset": "npm run clean && npm install && npx expo install --fix",
     "reset-project": "node ./scripts/reset-project.js",
     "patch:expo-cli": "node scripts/patch-expo-cli.js",
