update add section

--- a/app.json
+++ b/app.json
@@ -519,7 +519,14 @@
         }
       ],
       "expo-localization",
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "This app needs access to your photo library to attach images to tasks.",
+          "cameraPermission": "This app needs access to your camera to take photos for tasks."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
