--- a/package.json
+++ b/package.json
@@ -59,11 +59,14 @@
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
+    "expo-file-system": "~19.0.18",
     "expo-font": "~14.0.9",
+    "expo-application": "~7.0.7",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~8.0.9",
+    "expo-device": "~8.0.9",
     "expo-localization": "~17.0.7",
     "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
@@ -86,6 +89,7 @@
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "posthog-react-native": "^4.0.0",
     "replicate": "^1.3.1",
     "resend": "^6.3.0"
   },
