--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
     "convex": "^1.28.0",
     "d3-geo": "^3.1.1",
     "expo": "~54.0.24",
+    "expo-application": "~7.0.8",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
-    "expo-file-system": "~19.0.18",
+    "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
-    "expo-application": "~7.0.7",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~8.0.9",
-    "expo-device": "~8.0.9",
-    "expo-localization": "~17.0.7",
+    "expo-localization": "~17.0.8",
     "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-speech-recognition": "^2.1.5",
@@ -77,6 +77,8 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "i18next": "^25.6.0",
+    "posthog-react-native": "^4.14.3",
+    "posthog-react-native-session-replay": "^1.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^16.2.2",
@@ -89,7 +91,6 @@
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "posthog-react-native": "^4.0.0",
     "replicate": "^1.3.1",
     "resend": "^6.3.0"
   },
