--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "replicate": "^1.3.1",
+    "nodemailer": "^6.9.11",
     "resend": "^6.3.0"
   },
   "devDependencies": {
