Add QR scanner flow with QR event tracking

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "d3-geo": "^3.1.1",
     "expo": "~54.0.24",
     "expo-application": "~7.0.8",
+    "expo-camera": "~15.0.6",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
@@ -68,6 +69,7 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~8.0.9",
+    "expo-location": "~18.0.6",
     "expo-localization": "~17.0.8",
     "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
