--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
         "NSSpeechRecognitionUsageDescription": "This app uses speech recognition to help you quickly add tasks and ingredients by voice.",
         "NSMicrophoneUsageDescription": "This app needs microphone access to recognize your voice for adding tasks and ingredients.",
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to attach images to tasks.",
-        "NSCameraUsageDescription": "This app needs access to your camera to take photos for tasks."
+        "NSCameraUsageDescription": "This app needs access to your camera to take photos for tasks.",
+        "NSLocationWhenInUseUsageDescription": "This app uses your location to attach metadata to scanned QR codes."
       }
     },
     "android": {
@@ -29,7 +30,9 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "permissions": [
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
       ],
       "package": "com.haricotappsyndicate.haricot"
     },
