create 4 new themes, fix hard coded translations,

--- a/app.json
+++ b/app.json
@@ -284,7 +284,47 @@
             "./assets/fonts/sprat/Sprat-ExtendedThin.otf",
             "./assets/fonts/sprat/Sprat-Thin.otf",
             "./assets/fonts/sprat/SpratVF.ttf",
-            "./assets/fonts/zarathustra-v01.otf"
+            "./assets/fonts/zarathustra-v01.otf",
+            "./assets/fonts/CutiveMono-Regular.ttf",
+            "./assets/fonts/CareerFont-master/files-font/ttf/Career.ttf",
+            "./assets/fonts/CareerFont-master/files-font/ttf/Career-path.ttf",
+            "./assets/fonts/Host_Grotesk/HostGrotesk-VariableFont_wght.ttf",
+            "./assets/fonts/Host_Grotesk/HostGrotesk-Italic-VariableFont_wght.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Regular.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Italic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Light.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-LightItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Medium.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-MediumItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-SemiBold.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-SemiBoldItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Bold.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-BoldItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-ExtraBold.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-ExtraBoldItalic.ttf",
+            "./assets/fonts/isenheim-main/fonts/OpenType-PS/Isenheim_Regulier.otf",
+            "./assets/fonts/isenheim-main/fonts/OpenType-PS/Isenheim_Fin.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-Regular.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-Medium.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-SemiBold.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-Bold.otf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Light.ttf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Regular.ttf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Medium.ttf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Bold.ttf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Light.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-LightItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Regular.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-RegularItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Book.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-BookItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Medium.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-MediumItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Semibold.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-SemiboldItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Bold.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-BoldItalic.otf",
+            "./assets/fonts/uncut_sans-main/Variable/UncutSans-Variable.ttf"
           ],
           "ios": [
             "./assets/fonts/Peignot.ttf",
@@ -511,7 +551,47 @@
             "./assets/fonts/sprat/Sprat-ExtendedThin.otf",
             "./assets/fonts/sprat/Sprat-Thin.otf",
             "./assets/fonts/sprat/SpratVF.ttf",
-            "./assets/fonts/zarathustra-v01.otf"
+            "./assets/fonts/zarathustra-v01.otf",
+            "./assets/fonts/CutiveMono-Regular.ttf",
+            "./assets/fonts/CareerFont-master/files-font/ttf/Career.ttf",
+            "./assets/fonts/CareerFont-master/files-font/ttf/Career-path.ttf",
+            "./assets/fonts/Host_Grotesk/HostGrotesk-VariableFont_wght.ttf",
+            "./assets/fonts/Host_Grotesk/HostGrotesk-Italic-VariableFont_wght.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Regular.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Italic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Light.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-LightItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Medium.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-MediumItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-SemiBold.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-SemiBoldItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-Bold.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-BoldItalic.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-ExtraBold.ttf",
+            "./assets/fonts/Host_Grotesk/static/HostGrotesk-ExtraBoldItalic.ttf",
+            "./assets/fonts/isenheim-main/fonts/OpenType-PS/Isenheim_Regulier.otf",
+            "./assets/fonts/isenheim-main/fonts/OpenType-PS/Isenheim_Fin.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-Regular.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-Medium.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-SemiBold.otf",
+            "./assets/fonts/LTSoul-V2/LTSoul-Bold.otf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Light.ttf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Regular.ttf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Medium.ttf",
+            "./assets/fonts/space-grotesk-master/fonts/ttf/static/SpaceGrotesk-Bold.ttf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Light.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-LightItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Regular.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-RegularItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Book.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-BookItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Medium.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-MediumItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Semibold.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-SemiboldItalic.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-Bold.otf",
+            "./assets/fonts/uncut_sans-main/Static/UncutSans-BoldItalic.otf",
+            "./assets/fonts/uncut_sans-main/Variable/UncutSans-Variable.ttf"
           ]
         }
       ],
