--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "react-native-svg-transformer": "^1.5.2",
+    "replicate": "^1.4.0",
     "typescript": "~5.9.2"
   },
   "private": true
